--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "bundle/vim_python"]
 	path = bundle/vim_python
 	url = git@github.com:vim-scripts/python.vim--Vasiliev.git
+[submodule "bundle/vim_a"]
+	path = bundle/vim_a
+	url = git@github.com:vim-scripts/a.vim.git
+[submodule "bundle/vim_minibufexpl"]
+	path = bundle/vim_minibufexpl
+	url = git@github.com:fholgado/minibufexpl.vim.git
